[package]
name = "ac_rhack"
version = "0.1.0"
authors = ["Simon Scannell <s.scannell@web.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name  = "ac_rhack"
crate_type = ["dylib"]

[dependencies]
ctor = "0.1.16"
nix = "0.19.0"


[dependencies.lpmanipulator]
path = "../lpmanipulator"